bring in smuggler v1.1.0-beta changeset.
this makes our master branch a clone of smuggler's code at tag 'v1.1.0-beta':
- https://github.com/c0c0n3/ome-smuggler/tree/v1.1.0-beta

--- a/components/packager/packager.gradle
+++ b/components/packager/packager.gradle
@@ -4,7 +4,7 @@ ext.dirs = new BuildDir(buildDir)
 ext.bundle = new ReleaseBundle(dirs, new ReleaseInfo(
                                 [ baseName:   'ome-smuggler'
                                 , version:    version
-                                , classifier: '' // or 'beta' when appropriate
+                                , classifier: 'beta' // or '' when appropriate
                                 ]))
 
 def serverJarFile() { toFile(project(':server').jar) }
