--- a/components/cli/cli.gradle
+++ b/components/cli/cli.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 repositories {
     maven {
