--- a/components/server/server.gradle
+++ b/components/server/server.gradle
@@ -7,14 +7,8 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'jacoco'
 
 
-repositories {
-    maven {
-        url "http://repository.jboss.org/nexus/content/groups/public"
-    }
-}
-
 dependencies {
-    compile project(":util")
+    compile project(":kew"), project(":util")
 
     compile("org.springframework.boot:spring-boot-starter")
     compile("org.springframework.boot:spring-boot-starter-web")
