--- a/components/util/util.gradle
+++ b/components/util/util.gradle
@@ -13,10 +13,7 @@ dependencies {
     // only needed for util.config.YamlConverter:
     compile 'org.yaml:snakeyaml:1.17'
 
-    testCompile 'org.hamcrest:hamcrest-core:1.3'
-    testCompile 'org.hamcrest:hamcrest-library:1.3'
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'junit:junit:4.12'
+    testCompile libset.test_base
 }
 
 jar {
