avoid adding util deps to kew runtime.

--- a/components/kew-artemis/kew-artemis.gradle
+++ b/components/kew-artemis/kew-artemis.gradle
@@ -6,7 +6,7 @@ apply plugin: 'jacoco'
 
 
 dependencies {
-    compile project(":kew"), project(":util")
+    compile project(':kew')
 
     compile("org.apache.activemq:artemis-server:1.5.5")
     compile("org.apache.activemq:artemis-core-client:1.5.5")
