--- a/components/kew/kew.gradle
+++ b/components/kew/kew.gradle
@@ -6,7 +6,9 @@ apply plugin: 'jacoco'
 
 
 dependencies {
-    compile project(":util")
+    compile(project(':util')) {
+        transitive = false
+    }
 
     testCompile libset.test_base
 }
